# RayTracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-linux.sh  build-mac.sh
Math/: CMakeLists.txt
Math/include/Math/: Ray.hpp  Ray3.hpp  Vector3.hpp  Vector3.inl
Math/src/: Vector3.cpp
MultiThreadedRT/: CMakeLists.txt
MultiThreadedRT/include/MultiThreadedRT/: MT_AntiAliasingFilter.hpp  MultiThreadedRT.hpp  MultiThreadedRT.inl
MultiThreadedRT/src/: MultiThreadedRT.cpp
OpenMP_RT/: CMakeLists.txt
OpenMP_RT/include/OpenMP_RT/: OMP_AntiAliasingFilter.hpp  OMP_Camera.hpp  OpenMP_RT.hpp  OpenMP_RT.inl
OpenMP_RT/src/: OpenMP_RT.cpp
RayTracer/: CMakeLists.txt  RayTracer.cpp
RayTracerCmd/: CMakeLists.txt  RayTracer.cpp
RayTracerUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  RayTracerUI.pro  RenderArea.cpp  RenderArea.h
SceneObjects/: CMakeLists.txt
SceneObjects/include/: Camera.hpp
SceneObjects/include/Materials/: Dielectric.h  Dielectric.hpp  Dielectric.inl  Lambertian.h  Lambertian.hpp  Lambertian.inl  Material.h  Material.hpp  Material.inl  Metal.h  Metal.hpp  Metal.inl
SceneObjects/include/SceneObjects/: CompositeSceneObject.hpp  HitRecord.hpp  SceneObject.hpp  Sphere.hpp
SceneObjects/src/: Dielectric.cpp  Lambertian.cpp  Material.cpp  Metal.cpp  SceneObjects.cpp
SimpleRT/: CMakeLists.txt
SimpleRT/include/SimpleRT/: AntiAliasingFilter.hpp  Camera.hpp  CompositeSceneObject.hpp  SceneObject.hpp  SimpleRT.hpp  SimpleRT.inl  Sphere.h  Sphere.hpp
SimpleRT/src/: SimpleRT.cpp
